# RFSN-NPC

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  LEARNING_GUIDE.md  README.md  SHA256SUMS.txt  UPGRADE_SUMMARY.md  WIRING_GUIDE.md  build_manifest.json  demo.py  demo_learning.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_api_integration.py  verify_wiring.py  version.json
benchmarks/: benchmark_reducer.py
rfsn_hybrid/: __init__.py  api.py  cli.py  config.py  dev_watch.py  engine.py  export.py  file_watcher.py  harness.py  health.py  heartbeat.py  intent_classifier.py  lifecycle.py  logging_config.py  memory.py  metrics.py  persistence.py  prompting.py  rate_limit.py  relationships.py  relationships_enhanced.py  replay.py  semantic_memory.py  state_machine.py  storage.py  supervisor.py  types.py  util.py  validation.py  version.py
scripts/: generate_manifest.py
tests/: test_api_uses_engine.py  test_backpressure.py  test_config.py  test_decision_policy.py  test_dev_watch.py  test_env_decision_wiring.py  test_environment.py  test_export.py  test_fix_regression.py  test_harness.py  test_health.py  test_integration.py  test_intent_classifier.py  test_learning.py  test_learning_enhanced.py  test_learning_namespaces.py  test_lifecycle.py  test_memory.py  test_operational.py  test_prompting.py  test_queues_block.py  test_rate_limit.py  test_relationships.py  test_replay.py  test_replay_determinism.py  test_semantic_memory.py  (+5 more)
(+40 files in other folders)
